# MuseMelody

./: .gitignore  Cargo.toml  LICENSE  build.rs
src/: main.rs
ui/: CoverImage.slint  PlayButtons.slint  Slider.slint  TimeText.slint  icons.slint  main.slint  state.slint  utils.slint
